test/fail/syntax_error/unterminated_string_literal.amla
func main() int {
     return "hello;
}